force-app/main/default/objects/PurInvACBal__c/PurInvACBal__c.object-meta.xml
<CustomObject>
    <label>PROC Order Line+A/C Bal</label>
    <nameField>
        <displayFormat>PIAC-{000000}</displayFormat>
        <label>PUR INV+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROC Order Line+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>