force-app/main/default/objects/PurInvACBal__c/fields/ACBalAccountID__c.field-meta.xml
<CustomField>
    <fullName>ACBalAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A/C BAL Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PUR INV+A/C BAL</relationshipLabel>
    <relationshipName>PIACBalAccountID</relationshipName>
    <type>Lookup</type>
</CustomField>