force-app/main/default/objects/PurInvACBal__c/fields/AmountInclTaxLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountInclTaxLocalACBal__c</fullName>
    <label>AMOUNT INCL TAX(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>