force-app/main/default/objects/PurInvACBal__c/fields/AmountInclTaxLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountInclTaxLocalFormu__c</fullName>
    <formula>PurInvID__r.AmountIncludedTaxLocal__c</formula>
    <label>AMOUNT INCL TAX(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>