force-app/main/default/objects/PurInvACBal__c/fields/AmountInclTaxUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountInclTaxUSDACBal__c</fullName>
    <label>AMOUNT INCL TAX(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>