force-app/main/default/objects/PurInvACBal__c/fields/AmountOfTaxLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxLocalACBal__c</fullName>
    <label>AMOUNT OF TAX(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>