force-app/main/default/objects/PurInvACBal__c/fields/AmountOfTaxLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxLocalFormu__c</fullName>
    <formula>PurInvID__r.AmountOfTaxLocal__c</formula>
    <label>AMOUNT OF TAX(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>