force-app/main/default/objects/PurInvACBal__c/fields/AmountOfTaxUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxUSDACBal__c</fullName>
    <label>AMOUNT OF TAX(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>