force-app/main/default/objects/PurInvACBal__c/fields/PurInvID__c.field-meta.xml
<CustomField>
    <fullName>PurInvID__c</fullName>
    <label>PUR INV ID</label>
    <referenceTo>PurchasingInvoice__c</referenceTo>
    <relationshipLabel>PUR INV+A/C BAL</relationshipLabel>
    <relationshipName>PurInvID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>