force-app/main/default/objects/PurInvACBal__c/fields/UnpaidBalLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalLocalFormu__c</fullName>
    <formula>PurInvID__r.UnpaidBalanceLocal__c</formula>
    <label>UNPAID BAL(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>