force-app/main/default/objects/PurInvACBal__c/fields/UnpaidBalUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalUSDACBal__c</fullName>
    <label>UNPAID BAL(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>