force-app/main/default/objects/PurInvACBal__c/fields/UnpaidBalUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalUSDFormu__c</fullName>
    <formula>PurInvID__r.UnpaidBalance__c</formula>
    <label>UNPAID BAL(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>